--- a/lista-de-contato-1.html
+++ b/lista-de-contato-1.html
@@ -117,6 +117,9 @@
             </li>
         </ul>
     </div>
+    <footer>
+        <h3><a href="/principal.html.html">voltar</a></h3>
+    </footer>
     
 </body>
 </html>
