--- a/lista-de-contato-1.html
+++ b/lista-de-contato-1.html
@@ -118,8 +118,9 @@
         </ul>
     </div>
     <footer>
-        <h3><a href="/principal.html.html">voltar</a></h3>
+   <aside><a href="https://portfoliomatheusft.netlify.app/" class="voltar"> <-voltar</a></aside>    
     </footer>
     
 </body>
 </html>
+
